# WinAppLocker

./: .gitignore  AGENTS.md  Makefile  PLAN.md  README.md  config.h
builder/: builder.c
docs/: ANALYSIS_REPORT.md  BUILD_SYSTEM_IMPROVEMENT_PLAN.md  BUILD_SYSTEM_REVIEW_20260721-b.md  BUILD_SYSTEM_REVIEW_20260721_a.md  CHANGES-20260722.md  CHANGES.md  DEBUGGING_WISDOM_20260720.md  DEVENV.md  DontSleep_REFLECTIVE_BUG.md  INTEGRATION.md  PACKER_INDEPENDENT_REVIEW_20260721_1500_hy3.md  PACKER_REVIEW_INDEPENDENT_20260721-203000.md  WinAppLocker-DotNet-Design.md  build-system-refact-task.md  packer_bug_analysis_20260720.md  packer_code_review-20260720.md
docs/specs/: 2026-07-20-x86-msvc-migration-and-build-refactor.md
dotnet/: Directory.Build.props  README.md  WinAppLocker.slnx  build.ps1  test.ps1
dotnet/packer/: App.config  AppLogger.cs  CryptoUtil.cs  FodyWeavers.xml  IconCopier.cs  MainForm.Designer.cs  MainForm.cs  NativeMethods.cs  PackCore.cs  PackInfo.cs  PayloadBuilder.cs  PeReader.cs  Program.cs  ReflectivePacker.cs  StubLoader.cs  StubManifest.cs  StubRegistry.cs  VersionInfo.cs  WinAppLocker.Packer.csproj  WinLockPacker.cs  app.manifest
dotnet/packer/stub/: stub_console.exe.meta.json  stub_gui.exe.meta.json  stub_test.exe.meta.json  winlock_builder.exe.meta.json  winlock_reflective_builder.exe.meta.json
dotnet/shared/: ByteSearch.cs  Crc32.cs  ExtTlv.cs  PayloadFormat.cs  PayloadHeader.cs  WinAppLocker.Shared.csproj
dotnet/stub/: CryptoUtil.cs  Directory.Build.props  ErrorReporter.cs  NativeMethods.cs  PasswordForm.Designer.cs  PasswordForm.cs  PasswordReader.cs  PayloadReader.cs  ProcessLauncher.cs  Program.cs  SharedFormat.cs  StubEntry.cs  WinAppLocker.Stub.csproj  app.manifest
dotnet/stub.console/: ErrorReporter.cs  PasswordReader.cs  Program.cs  WinAppLocker.Stub.Console.csproj
dotnet/stub.test/: ErrorReporter.cs  PasswordReader.cs  Program.cs  WinAppLocker.Stub.Test.csproj
dotnet/tests/: auto_test.ps1
dotnet/tests/WinAppLocker.Packer.Tests/: CryptoUtilTests.cs  PayloadBuilderTests.cs  PeReaderTests.cs  WinAppLocker.Packer.Tests.csproj
dotnet/tests/WinAppLocker.Shared.Tests/: Crc32Tests.cs  ExtTlvAndByteSearchTests.cs  PayloadHeaderTests.cs  WinAppLocker.Shared.Tests.csproj
dotnet/tests/tmp/: enum_icons.ps1  enum_icons_detail.ps1
packer/: .gitignore  AGENTS.md  CMakeLists-x64.txt  CMakeLists-x86.txt  CMakeLists.txt  Makefile  Makefile.mingw  README.md  build.ps1  config.h
packer/builder/: CMakeLists.txt  builder.c  builder_reflective.c
packer/cmake/: check_stub_freshness.py  extract_lock_section.py  inspect_stub.py  msvc_setup.cmake  patch_stub_identity.py
packer/common/: config.h  pe_meta.h  peb_walk.h  sha256.h  winlock_compat.h  xtea.h
packer/docs/: MSVC_PORRINT_AND_PIC_SPEC.md  MSVC_PORTING_PLAN.md  PACKER_DETECTION.md  PACKER_TECHNIQUES.md  PORTING_PLAN.md  REFLECTIVE_ANALYSIS.md  REFLECTIVE_DESIGN.md  STUB_LAYOUT.md  TLS_NOTES.md  packer-code-review-by-ds4p-20269722b.md  packer-code-review-by-hy3-20269722a.md
packer/inplace/: CMakeLists.inc  builder.c  stub.c  stub.ld  stub_asm_x64.asm  stub_asm_x86.asm
packer/reflective/: CMakeLists.inc  CMakeLists.txt  builder_reflective.c  loader.c  loader_asm_x64.asm  loader_asm_x86.asm  payload.h
packer/stub/: CMakeLists.txt  stub.c  stub_asm_x86.asm
packer/tests/: analyze_samples.py  auto_e2e_test.ps1  baseline_mingw.txt  build_x86_stub.ps1  cdb_diag_cmd.txt  check_reloc.py  compare_qq.py  dump_dirs.py  e2e_test.ps1  fix_checksum.py  gdb_debug.ps1  manual_test.ps1  pe_info.py  reflective_batch_test.ps1  run_reflective_test.ps1  run_x86_test.ps1  stub_sha256_test.c  test_pack_x86.ps1  test_x86_dialog.ps1  test_x86_password.ps1  verify_pwd_hash.ps1
packer/tests/host/: host_sha256_test.c  host_tests.ps1  host_xtea_test.c
rust/: .gitignore  Cargo.toml  IMPLEMENTATION.md  README.md  README.txt  rebuild.ps1  test_locked.ps1  watch.ps1
rust/crates/exelock-crypto/: Cargo.toml
rust/crates/exelock-crypto/src/: algorithm.rs  kdf.rs  lib.rs
rust/crates/exelock-crypto/tests/: round_trip.rs
rust/crates/exelock-payload/: Cargo.toml
rust/crates/exelock-payload/src/: footer.rs  header.rs  lib.rs  reader.rs  writer.rs
rust/crates/exelock-payload/tests/: round_trip.rs
rust/crates/exelock-pe/: Cargo.toml
rust/crates/exelock-pe/src/: lib.rs  loader.rs  parser.rs
rust/crates/exelock-pe/tests/: parse_samples.rs
rust/docs/: ARCHITECTURE.md  FORMAT.md
rust/packer/: Cargo.toml  build.rs
rust/packer/examples/: diagnose.rs  pack_cli.rs  pack_test.rs
rust/packer/src/: app.rs  crypto.rs  icon.rs  lib.rs  main.rs  pack.rs  strength.rs  stub_selector.rs  version.rs
rust/packer/tests/: pack_round_trip.rs
rust/stub/: Cargo.toml  build.rs
rust/stub/src/: lib.rs  main.rs  password_ui.rs
rust/tests/samples/: info.txt
rust/tests/samples/hello/: Cargo.toml
rust/tests/samples/hello/src/: main.rs
stub/: sha256.h  stub.c  stub.ld
test/: Notepad4.ini
tests/: build_builder.ps1  build_make.ps1  check_dontsleep.py  check_gcc.ps1  debug_dontsleep_refl.ps1  debug_wfopen.py  dump_stub_data.ps1  gdb_hellox86.ps1  gen_api_hash.py  input_password.ps1  inspect_dlg.py  manual_test.ps1  pe_cfg.py  pe_delay.py  pe_dump.py  stub_sha256_test.c  test_apps_batch.py  test_apps_batch2.py  test_e2e_msvc.py  test_hellox86.ps1  test_sha256.c  test_x64_regression.ps1
tools/: cdb_run_cmd.txt  dump_imports.py  e2e_test.py  flip_aslr.py  gui_test.py  pe_diag.py  pe_dump2.py  pe_info.py  start_idapro_mcp_server.bat  test_apps_batch.ps1  test_hellox86_pwd.ps1  test_hellox86_run.ps1  test_qq.ps1  test_qq_watch_dlg.ps1  test_x86_full.ps1
