[workspace]
members = [
    "packer",
    "stub",
]
resolver = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[workspace.dependencies]
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
rand = "0.8"
anyhow = "1.0"
thiserror = "1.0"
windows = { version = "0.51", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security_Cryptography",
    "Win32_System_Console",
] }
