[package]
name = "exelock-packer"
version = "0.1.0"
edition = "2021"

[lib]
name = "exelock_packer"
path = "src/lib.rs"

[[bin]]
name = "WinAppLocker"
path = "src/main.rs"

[dependencies]
exelock-crypto = { path = "../crates/exelock-crypto" }
exelock-payload = { path = "../crates/exelock-payload" }
exelock-pe = { path = "../crates/exelock-pe" }
eframe = { workspace = true }
rfd = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
crossbeam-channel = { workspace = true }
windows = { workspace = true }
image = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
winres = { workspace = true }
