[package]
name = "exelock-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = { workspace = true }
chacha20poly1305 = { workspace = true }
pbkdf2 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }
